--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     
     <header>
-        <a href="index.html" id="logo"><img src="../images/logo.svg" alt="logo"></a>
+        <a href="index.html" id="logo"><img src="./images/logo.svg" alt="logo"></a>
         <nav>
             <ul class="nav-links">
                 <li><a href="#logo">Home</a></li>
