--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     
     <header>
-        <a href="index.html" id="logo"><img src="images/logo.svg" alt="logo"></a>
+        <a href="index.html" id="logo"><img src="./images/logo.svg" alt="logo"></a>
         <nav>
             <ul class="nav-links">
                 <li><a href="#logo">Home</a></li>
@@ -37,19 +37,19 @@
     <section class="services">
         <div class="wrapper">
         <div class="services-1">
-            <img class="icon" id="first"src="../images/rocket.svg" alt="rocket icon">
+            <img class="icon" id="first"src="./images/rocket.svg" alt="rocket icon">
             <strong>
                 I can design and build a responsive and accessible website
             </strong>
             <p>My goal is to build accessible and responsive user interfaces for the web and mobile, while preserving the best practices for proper user experience.</p>
         </div>
         <div class="services-2">
-            <img class="icon" src="../images/cart.svg" alt="cart icon">
+            <img class="icon" src="./images/cart.svg" alt="cart icon">
             <strong>I can design and build an eCommerce store</strong>
             <p>I have extensive knowledge of development on the front-end and back-end, so I’m able to deliver a completely functional eCommerce website.</p>
         </div>
         <div class="services-3">
-            <img class="icon" src="../images/cellphone.svg" alt="cellphone icon">
+            <img class="icon" src="./images/cellphone.svg" alt="cellphone icon">
             <strong>I can design and build a mobile app for iOS and Android</strong>
             <p>I recently started designing and coding mobile apps and I love it. It’s a different process compared to traditional website design but I’ve been successful in all prjects so far.</p>
         </div>
@@ -61,17 +61,17 @@
             <h2>My Work</h2>
             <p>I specialize in creating website designs.</p>
         <!-- </div> -->
-        <div class="proj-1"><a href="https://docs.google.com/presentation/d/1KrYnPxVvHedmP9rtO3KSVYyLmGkRpeLl708_v_GzR7k/present#slide=id.p" target="_blank" alt="website"><img src="../images/twb.svg"></a>
+        <div class="proj-1"><a href="https://docs.google.com/presentation/d/1KrYnPxVvHedmP9rtO3KSVYyLmGkRpeLl708_v_GzR7k/present#slide=id.p" target="_blank" alt="website"><img src="./images/twb.svg"></a>
         </div>
-        <div id="ddw-img"class="proj-2"><a href="proj-2/proj-2.html" target="_blank"><img src="../images/ddw.svg" alt="website"></a></div>
-        <div class="proj-3"><a href="https://www.figma.com/proto/T5P0UbDqAfvAfsSXXw05r6/Coach-Sara-Carter?page-id=22%3A52&node-id=22%3A53&starting-point-node-id=22%3A53&scaling=contain" target="_blank"><img src="../images/coach-sara.svg" alt="website"></a><div>
+        <div id="ddw-img"class="proj-2"><a href="proj-2/proj-2.html" target="_blank"><img src="./images/ddw.svg" alt="website"></a></div>
+        <div class="proj-3"><a href="https://www.figma.com/proto/T5P0UbDqAfvAfsSXXw05r6/Coach-Sara-Carter?page-id=22%3A52&node-id=22%3A53&starting-point-node-id=22%3A53&scaling=contain" target="_blank"><img src="./images/coach-sara.svg" alt="website"></a><div>
         
     </section>
 
     <section class="contact">
         <div class="contact-wrapper">
             <div>
-            <img src="../images/leaf-2.png" alt="leaf">
+            <img src="./images/leaf-2.png" alt="leaf">
             </div>
             <div>
             <h3>I'm currently available for freelance <br> work.</h3>
