--- a/about-me/about.html
+++ b/about-me/about.html
@@ -15,7 +15,7 @@
 <body>
     
     <header>
-        <a href="#" id="logo"><img src="../images/logo.svg" alt="logo"></a>
+        <a href="../index.html  " id="logo"><img src="../images/logo.svg" alt="logo"></a>
         <nav>
             <ul class="nav-links">
                 <li><a href="../../index.html">Home</a></li>
