--- a/about-me/about.html
+++ b/about-me/about.html
@@ -28,7 +28,7 @@
     <main>
             <h4>About Me</h4>
             <div class="about-me-wrapper">
-            <div class="profile"><img src="../images/me.jpg" alt="profile photo"></div>
+            <div class="profile"><img src="./images/me.jpg" alt="profile photo"></div>
             <div class="all-about-me"><p>I'm a Visual Designer that loves to learn new skills and create beautiful designs that help others share their passions with the world. I start with the concept I want to use, then draw the sketch that will embody the project, and then move on to creating it digitally. <br> <br>
                 Before learning how to wireframe and use Adobe Creative Suite, I was working in Finance. I began learning web design online so I could start freelancing as a side hustle. As soon as I learned about color iconography and typefaces I was hooked and I've been seeking out visual design opportunities ever since. I love knowing that I can help businesses reach their ideal customers with clean, user-friendly designs that meet their needs on any platform. <br> <br>
                 You can usually find me watching a documentary or learning something new on Youtube. I love listening to music and audiobooks</p></div>
