--- a/about-me/about.html
+++ b/about-me/about.html
@@ -18,7 +18,7 @@
         <a href="../index.html" id="logo"><img src="../images/logo.svg" alt="logo"></a>
         <nav>
             <ul class="nav-links">
-                <li><a href="../../index.html">Home</a></li>
+                <li><a href="../index.html">Home</a></li>
                 <li><a href="about-me/about.html">About Me</a></li>
                 <li><a href="../contact/contact.html">Contact</a></li>
             </ul>
