--- a/index.html
+++ b/index.html
@@ -61,12 +61,9 @@
             <h2>My Work</h2>
             <p>I specialize in creating website designs.</p>
         <!-- </div> -->
-        <div class="proj-1"><a href="https://docs.google.com/presentation/d/1KrYnPxVvHedmP9rtO3KSVYyLmGkRpeLl708_v_GzR7k/present#slide=id.p" target="_blank" alt="website"><img src="./images/twb.svg"></a>
-        </div>
-        <div id="ddw-img"class="proj-2"><a href="https://www.figma.com/proto/pUV2JRKGgjWpOkxIeVqnSR/Case-Studies?page-id=0%3A1&node-id=5%3A28&viewport=279%2C57%2C0.04&scaling=scale-down" target="_blank"><img src="./images/ddw.svg" alt="website"></a></div>
-        <p class="description">Single Page Portfolio Web Design for a Freelance Photographer</p>
-        <div class="proj-3"><a href="https://www.figma.com/proto/T5P0UbDqAfvAfsSXXw05r6/Coach-Sara-Carter?page-id=22%3A52&node-id=22%3A53&starting-point-node-id=22%3A53&scaling=contain" target="_blank"><img src="./images/coach-sara.svg" alt="website"></a><div>
-            <p class="description">Design Comp created using Figma. This interactive design was created to help small business owner showcase their skills online to the community. <strong>Click the image to see the final results!</strong></p>
+        <div class="proj-1"><a href="https://docs.google.com/presentation/d/1KrYnPxVvHedmP9rtO3KSVYyLmGkRpeLl708_v_GzR7k/present#slide=id.p" target="_blank" alt="website"><img src="./images/twb.svg"></a><p class="description">Completed Brand Identity for local coffee shop.<br><strong class="cta">- Click the image to see the final results -</strong></p></div>
+        <div id="ddw-img"class="proj-2"><a href="https://www.figma.com/proto/pUV2JRKGgjWpOkxIeVqnSR/Case-Studies?page-id=0%3A1&node-id=5%3A28&viewport=279%2C57%2C0.04&scaling=scale-down" target="_blank"><img src="./images/ddw.svg" alt="website"></a><p class="description">Single Page Portfolio Web Design for a Freelance Photographer. <br><strong class="cta">- Click the image to see the final results -</strong></p></div>
+        <div class="proj-3"><a href="https://www.figma.com/proto/T5P0UbDqAfvAfsSXXw05r6/Coach-Sara-Carter?page-id=22%3A52&node-id=22%3A53&starting-point-node-id=22%3A53&scaling=contain" target="_blank"><img src="./images/coach-sara.svg" alt="website"></a><p class="description">Design Comp created using Figma. This interactive design was created to help small business owner showcase their skills online to the community.<br><strong class="cta">- Click the image to see the final results -</strong></p></div>
     </section>
 
     <section class="contact">
@@ -77,7 +74,7 @@
             <div>
             <h3>I'm currently available for freelance <br> work.</h3>
             <p>If you’re looking for a designer and developer that likes to get stuff done, let me know.</p>
-            <button class="btn-2">Got a project in mind? Let's talk!</button>
+            <a href="contact/contact.html"><button class="btn-2">Got a project in mind? Let's talk!</button></a>
         </div>
         </div>
     </section>
