updated contact page

--- a/contact/contact.html
+++ b/contact/contact.html
@@ -64,10 +64,14 @@
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
-        
     </header>
     
     <main>
+        <div class="contact-me">
+            <h3>Got a Project in Mind?</h3>
+            <p>Just use this form to give me as much detail as possible, and I'll get back to you as soon as I can.</p><br>
+            <p>Also if you want to get in touch with me you can use this <a href="nv4development@gmail.com">link</a> to email me directly  or contact me on social media.</p>
+        </div>
         <div class="container">
             <label for="lname">Your Name</label>
             <input type="text" id="lname" name="lastname" placeholder="Name" required>
@@ -83,5 +87,14 @@
             <img src="" alt="">
           </div>
     </main>
+    <footer>
+        <div class="ftr-wrapper">
+        <div class="copyright">
+            <p class="copy">&copy; nv4development. All rights reserved</p>
+            <p class="privacy"><strong>Privacy Policy</strong></p>
+            <p class="terms"><strong>Terms & Conditions</strong></p>
+        </div>
+        </div>
+    </footer>
 </body>
 </html>
