--- a/contact/contact.html
+++ b/contact/contact.html
@@ -69,8 +69,8 @@
     <main>
         <div class="contact-me">
             <h3>Got a Project in Mind?</h3>
-            <p>Just use this form to give me as much detail as possible, and I'll get back to you as soon as I can.</p><br>
-            <p>Also if you want to get in touch with me you can use this <a href="nv4development@gmail.com">link</a> to email me directly  or contact me on social media.</p>
+            <p class="details">Just use this form to give me as much detail as possible, and I'll get back to you as soon as I can.<br><br>
+            Also if you want to get in touch with me you can use this <a href="nv4development@gmail.com">link</a> to email me directly  or contact me on social media.</p>
         </div>
         <div class="container">
             <label for="lname">Your Name</label>
@@ -86,7 +86,19 @@
             </form>
             <img src="" alt="">
           </div>
+
+          <!-- <div class="contact-form">
+            <form action="https://formspree.io/f/mpznqyyy" method="POST">
+                <label for="" placeholder="Name">Your Name</label>
+                <label for="" placeholder="Email address">Your Email address</label>
+                <label for="" placeholder="Project Details">Your Project Details</label>
+                <label for="" placeholder="Price range">Your Price range</label>
+                <label for="" placeholder="Timeline">Your Timeline</label>
+                <button type="submit">Let's do this<img src="../images/paper-plane.png" alt="paper plane icon"></button>
+            </form>
+          </div> -->
     </main>
+
     <footer>
         <div class="ftr-wrapper">
         <div class="copyright">
