updated contact page

--- a/contact/contact.html
+++ b/contact/contact.html
@@ -43,7 +43,7 @@
                     </div>
                     <div class="input-group">
                         <input type="text" id="email">
-                        <label for="email" required>Your Email address</label>
+                        <label for="email" name="email" required>Your Email address</label>
                     </div>
                 </div>
                 
