updted contact me page form styles

--- a/contact/contact.html
+++ b/contact/contact.html
@@ -27,7 +27,7 @@
         </nav>
     </header>
     
-    <section>
+    <section class="contact-page">
         <div class="contact-me">
             <h3>Got a Project in Mind?</h3>
             <p class="details">Just use this form to give me as much detail as possible, and I'll get back to you as soon as I can.<br><br>
@@ -44,6 +44,7 @@
                 </ul>
             </div>
         </div>
+
         <div class="container">
             <div class="row">
                 <div class="col">
