finally got top section side by side :D

--- a/contact/contact.html
+++ b/contact/contact.html
@@ -65,7 +65,7 @@
                     <div class="time-group">
                         Your Timeline <input type="timeline" placeholder="Timeline" required>
                     </div>
-                    <button type="submit">Let's do this <img src="../images/paper-plane.png" alt="paper plane icon"></button>
+                    <button type="submit" class="btn-3">Let's do this <img src="../images/paper-plane.png" alt="paper plane icon"></button>
                 </form>
                 </div>
             </div>
