--- a/contact/contact.html
+++ b/contact/contact.html
@@ -51,21 +51,22 @@
                     <form action="https://formspree.io/f/mpznqyyy"
                     method="POST">
                     <div class="name-group">
-                        Your Name <input type="text" placeholder="Your name" required>
+                        Your Name
+                        <input type="text" name="name" placeholder="Your name" required>
                     </div>
                     <div class="mail-group">
-                        Your Email <input type="email" placeholder="Your email" required>
+                        Your Email <input type="email" name="email" placeholder="Your email" required>
                     </div>
                     <div class="mssg">
-                        Your Project Details <textarea placeholder="Project details" cols="30" rows="10" required></textarea>
+                        Your Project Details <textarea placeholder="Project details" name="mssg" cols="30" rows="10" required></textarea>
                     </div>
                     <div class="price-group">
-                        Your Price range <input type="price" placeholder="Price range" required>
+                        Your Price range <input type="price" placeholder="Price range" name="price" required>
                     </div>
                     <div class="time-group">
-                        Your Timeline <input type="timeline" placeholder="Timeline" required>
+                        Your Timeline <input type="timeline" placeholder="Timeline" name="timeline" required>
                     </div>
-                    <button type="submit" class="btn-3">Let's do this <img src="../images/paper-plane.png" alt="paper plane icon"></button>
+                    <button type="submit" name="button" class="btn-3">Let's do this <img src="../images/paper-plane.png" alt="paper plane icon"></button>
                 </form>
                 </div>
             </div>
