completed contact page styling :p

--- a/contact/contact.html
+++ b/contact/contact.html
@@ -58,7 +58,7 @@
                         Your Email <input type="email" name="email" placeholder="Your email" required>
                     </div>
                     <div class="mssg">
-                        Your Project Details <textarea placeholder="Project details" name="mssg" cols="30" rows="10" required></textarea>
+                        Your Project Details <textarea placeholder="Project details" name="mssg" cols="20" rows="8" required></textarea>
                     </div>
                     <div class="price-group">
                         Your Price range <input type="price" placeholder="Price range" name="price" required>
@@ -66,14 +66,14 @@
                     <div class="time-group">
                         Your Timeline <input type="timeline" placeholder="Timeline" name="timeline" required>
                     </div>
-                    <button type="submit" name="button" class="btn-3">Let's do this <img src="../images/paper-plane.png" alt="paper plane icon"></button>
+                    <button type="submit" name="submit-button" class="btn-3">Let's do this <img src="../images/paper-plane.png" alt="paper plane icon"></button>
                 </form>
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- <footer>
+    <footer>
         <div class="ftr-wrapper">
         <div class="copyright">
             <p class="copy">&copy; nv4development. All rights reserved</p>
@@ -81,6 +81,6 @@
             <p class="terms"><strong>Terms & Conditions</strong></p>
         </div>
         </div>
-    </footer> -->
+    </footer>
 </body>
 </html>
