updated social links on contact page :)

--- a/contact/contact.html
+++ b/contact/contact.html
@@ -34,13 +34,13 @@
             Also if you want to get in touch with me you can reach me directly on social media.</p>
             <div class="socials">
                 <ul>
-                    <li><i class="fa-brands fa-linkedin">
-                        <a href="https://www.linkedin.com/in/natashamunoz/" alt="Linkedin icon"></a></i></li>
-                    <li><i class="fa-brands fa-instagram">
-                        <a href="https://www.instagram.com/nmunoz0923/" alt="Instagram icon"></a></i></li>
-                    <li><i class="fa-brands fa-github">
-                        <a href="https://github.com/nmunoz0923" alt="Github icon">
-                        </a></i></li>
+                    <li><a href="https://www.linkedin.com/in/natashamunoz/" target="_blank"><i class="fa-brands fa-linkedin">
+                        </i></a></li>
+                    <li><a href="https://www.instagram.com/designnv_gram/" target="_blank"><i class="fa-brands fa-instagram">
+                        </i></a></li>
+                    <li><a href="https://github.com/nmunoz0923" target="_blank">
+                    <i class="fa-brands fa-github">
+                        </i></a></li>
                 </ul>
             </div>
         </div>
