updated tablet footer mediaquery

--- a/index.html
+++ b/index.html
@@ -82,9 +82,11 @@
     <footer>
         <div class="ftr-wrapper">
         <div class="copyright">
-            <p class="copy">&copy; nv4development. All rights reserved</p>
-            <p class="privacy"><strong>Privacy Policy</strong></p>
-            <p class="terms"><strong>Terms & Conditions</strong></p>
+            <div class="copy">&copy; nv4development. All rights reserved</div>
+            <div class="privacy"><strong class="">Privacy Policy</strong>
+            </div>
+            <div class="terms"><strong>Terms & Conditions</strong>
+            </div>
         </div>
         </div>
     </footer>
