--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <main>
     <section class="hero">
         <h1>Hey there, I'm Natasha</h1>
-        <h2>Freelance UI Designer<br>& Web Developer</h2>
+        <h2>Freelance Visual Designer<br>& Web Developer</h2>
         <p>I help business grow by crafting amazing web experiences. <br> If your looking for a designer and developer that has a diverse range of skills and likes to get stuff done, lets talk.</p>
         <a href="#mywork"><button class="btn-1">See My Work<i class="fa-solid fa-arrow-down"></i></button></a>
     </section>
@@ -39,19 +39,19 @@
         <div class="services-1">
             <img class="icon" id="first"src="./images/rocket.svg" alt="rocket icon">
             <strong>
-                I can design and build a responsive and accessible website
+                Built accessible responsive websites
             </strong>
             <p>My goal is to build accessible and responsive user interfaces for the web and mobile, while preserving the best practices for proper user experience.</p>
         </div>
         <div class="services-2">
             <img class="icon" src="./images/cart.svg" alt="cart icon">
-            <strong>I can design and build an eCommerce store</strong>
-            <p>I have extensive knowledge of development on the front-end and back-end, so I’m able to deliver a completely functional eCommerce website.</p>
+            <strong>Designed an eCommerce store</strong>
+            <p>Experience in re-designing existing websites, this allows users to always have the right experience when visiting your eCommerce website. It’s a different process compared to traditional website design but I’ve been successful in all prjects so far.</p>
         </div>
         <div class="services-3">
             <img class="icon" src="./images/cellphone.svg" alt="cellphone icon">
-            <strong>I can design and build a mobile app for iOS and Android</strong>
-            <p>I recently started designing and coding mobile apps and I love it. It’s a different process compared to traditional website design but I’ve been successful in all prjects so far.</p>
+            <strong>Designed and built projects that showcase my skills.</strong>
+            <p>I recently started designing and coding mobile first and I love it. This process ensures users can have the most up to date experience when viewing your website. </p>
         </div>
     </div>
     </section>
@@ -59,7 +59,7 @@
     <section id="mywork" class="my-work">
         <!-- <div class="wrapper"> -->
             <h2>My Work</h2>
-            <p>I specialize in creating website designs.</p>
+            <p class="my-work-para">I specialize in creating website designs.</p>
         <!-- </div> -->
         <div class="proj-1"><a href="https://www.figma.com/proto/pUV2JRKGgjWpOkxIeVqnSR/Case-Studies?page-id=32%3A2&node-id=32%3A5&viewport=173%2C116%2C0.41&scaling=scale-down" target="_blank" alt="website"><img src="./images/twb.svg"></a><p class="description">Completed Brand Identity for local coffee shop.<br><strong class="cta">Click <a href="https://docs.google.com/presentation/d/1KrYnPxVvHedmP9rtO3KSVYyLmGkRpeLl708_v_GzR7k/present#slide=id.p" class="here-btn" target="_blank">here</a> to see full Brand Style Guide</strong></p></div>
         <div id="ddw-img"class="proj-2"><a href="https://www.figma.com/proto/pUV2JRKGgjWpOkxIeVqnSR/Case-Studies?page-id=32%3A3&node-id=37%3A2&viewport=352%2C219%2C0.2&scaling=scale-down" target="_blank"><img src="./images/ddw.svg" alt="website"></a><p class="description">Single Page Portfolio Web Design for a Freelance Photographer. </p></div>
