added id's for styling media queries

--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
             <p>My goal is to build accessible and responsive user interfaces for the web and mobile, while preserving the best practices for proper user experience.</p>
         </div>
         <div class="services-2">
-            <img class="icon" src="./images/cart.svg" alt="cart icon">
+            <img class="icon" id="second" src="./images/cart.svg" alt="cart icon">
             <strong>Designed an eCommerce store</strong>
             <p>Experience in re-designing existing websites, this allows users to always have the right experience when visiting your eCommerce website. It’s a different process compared to traditional website design but I’ve been successful in all prjects so far.</p>
         </div>
         <div class="services-3">
-            <img class="icon" src="./images/cellphone.svg" alt="cellphone icon">
+            <img class="icon" id="third" src="./images/cellphone.svg" alt="cellphone icon">
             <strong>Designed and built projects that showcase my skills.</strong>
             <p>I recently started designing and coding mobile first and I love it. This process ensures users can have the most up to date experience when viewing your website. </p>
         </div>
@@ -61,16 +61,16 @@
             <h2>My Work</h2>
             <p class="my-work-para">I specialize in creating website designs.</p>
         <!-- </div> -->
-        <div class="proj-1"><a href="https://www.figma.com/proto/pUV2JRKGgjWpOkxIeVqnSR/Case-Studies?page-id=32%3A2&node-id=32%3A5&viewport=173%2C116%2C0.41&scaling=scale-down" target="_blank" alt="website"><img src="./images/twb.svg"></a><p class="description">Completed Brand Identity for local coffee shop.<br><strong class="cta">Click <a href="https://docs.google.com/presentation/d/1KrYnPxVvHedmP9rtO3KSVYyLmGkRpeLl708_v_GzR7k/present#slide=id.p" class="here-btn" target="_blank">here</a> to see full Brand Style Guide</strong></p></div>
-        <div id="ddw-img"class="proj-2"><a href="https://www.figma.com/proto/pUV2JRKGgjWpOkxIeVqnSR/Case-Studies?page-id=32%3A3&node-id=37%3A2&viewport=352%2C219%2C0.2&scaling=scale-down" target="_blank"><img src="./images/ddw.svg" alt="website"></a><p class="description">Single Page Portfolio Web Design for a Freelance Photographer. </p></div>
-        <div class="proj-3"><a href="https://www.figma.com/proto/T5P0UbDqAfvAfsSXXw05r6/Coach-Sara-Carter?page-id=22%3A52&node-id=22%3A53&starting-point-node-id=22%3A53&scaling=contain" target="_blank"><img src="./images/coach-sara.svg" alt="website"></a><p class="description"> Interactive design created to help small business owner sell their services online.</p></div>
+        <div class="proj-1"><a href="https://www.figma.com/proto/pUV2JRKGgjWpOkxIeVqnSR/Case-Studies?page-id=32%3A2&node-id=32%3A5&viewport=173%2C116%2C0.41&scaling=scale-down" target="_blank" alt="website"><img src="./images/twb.svg"></a><p class="description" id="script-1">Completed Brand Identity for local coffee shop.<br><strong class="cta">Click <a href="https://docs.google.com/presentation/d/1KrYnPxVvHedmP9rtO3KSVYyLmGkRpeLl708_v_GzR7k/present#slide=id.p" class="here-btn" target="_blank">here</a> to see full Brand Style Guide</strong></p></div>
+        <div id="ddw-img"class="proj-2"><a href="https://www.figma.com/proto/pUV2JRKGgjWpOkxIeVqnSR/Case-Studies?page-id=32%3A3&node-id=37%3A2&viewport=352%2C219%2C0.2&scaling=scale-down" target="_blank"><img src="./images/ddw.svg" alt="website"></a><p id="script-2" class="description">Single Page Portfolio Web Design for a Freelance Photographer. </p></div>
+        <div class="proj-3"><a href="https://www.figma.com/proto/T5P0UbDqAfvAfsSXXw05r6/Coach-Sara-Carter?page-id=22%3A52&node-id=22%3A53&starting-point-node-id=22%3A53&scaling=contain" target="_blank"><img src="./images/coach-sara.svg" alt="website"></a><p class="description" id="script-3"> Interactive design created to help small business owner sell their services online.</p></div>
     </section>
 
     <section class="contact">
         <div class="contact-wrapper">
-            <div>
+            <!-- <div>
             <img src="./images/leaf-2.png" alt="leaf">
-            </div>
+            </div> -->
             <div>
             <h3>I'm currently available for freelance <br> work.</h3>
             <p>If you’re looking for a designer and developer that likes to get stuff done, let me know.</p>
