added id's to style media queries

--- a/about-me/about.html
+++ b/about-me/about.html
@@ -26,6 +26,7 @@
         <!-- <a href="#" class="cta"><button>Let's Get In Touch</button></a> -->
     </header>
     <main>
+        <section class="about-me-page">
             <h4>About Me</h4>
             <div class="about-me-wrapper">
             <div class="profile"><img src="../images/me.JPG" alt="profile photo"></div>
@@ -39,7 +40,7 @@
                 <li>Mobile-First Design</li>
                 <li>Front-End Web Development</li>
                 <li>HTML & CSS</li>
-                <li>UI Design Patterns</li>
+                <li>UI Design <br> Patterns</li>
                 <li>Wireframing</li>
                 <li>Hi-Fidelity Mockup</li>
                 <li>Logo & Icon Design</li>
@@ -56,6 +57,7 @@
                 <li>InDesign</li>
             </ul>
         </div>
+    </section>
     </main>
     <footer>
         <div class="ftr-wrapper">
