added id's to style media queries

--- a/contact/contact.html
+++ b/contact/contact.html
@@ -66,7 +66,7 @@
                     <div class="time-group">
                         Your Timeline <input type="timeline" placeholder="Timeline" name="timeline" required>
                     </div>
-                    <button type="submit" name="submit-button" class="btn-3">Let's do this <img src="../images/paper-plane.png" alt="paper plane icon"></button>
+                    <button type="submit" name="submit-button" class="btn-3"><p>Let's do this</p><img src="../images/paper-plane.png" alt="paper plane icon"></button>
                 </form>
                 </div>
             </div>
@@ -74,7 +74,7 @@
     </section>
 
     <footer>
-        <div class="ftr-wrapper">
+        <div id="contact-page-ftr" class="ftr-wrapper">
         <div class="copyright">
             <p class="copy">&copy; nv4development. All rights reserved</p>
             <p class="privacy"><strong>Privacy Policy</strong></p>
