--- a/about-me/about.html
+++ b/about-me/about.html
@@ -31,8 +31,8 @@
             <div class="about-me-wrapper">
             <div class="profile"><img src="../images/me.JPG" alt="profile photo"></div>
             <div class="all-about-me"><p>I'm a Visual Designer that loves to learn new skills and create beautiful designs that help others share their passions with the world. I start with the concept I want to use, then draw the sketch that will embody the project, and then move on to creating it digitally. <br> <br>
-                Before learning how to wireframe and use Adobe Creative Suite, I was working in Finance. I began learning web design online so I could start freelancing as a side hustle. As soon as I learned about color iconography and typefaces I was hooked and I've been seeking out visual design opportunities ever since. I love knowing that I can help businesses reach their ideal customers with clean, user-friendly designs that meet their needs on any platform. <br> <br>
-                You can usually find me watching a documentary, making graphic illustrations, or learning something new on Youtube. I am so excited about creating digital products that connect people across the globe.</p></div>
+                Before learning how to wireframe and use Adobe Creative Suite, I was working in Finance. I began learning web design online so I could start freelancing as a side hustle. As soon as I learned about color schemes, iconography, and typefaces I was hooked; and I've been seeking out visual design opportunities ever since. I love knowing that I can help small businesses and entrepreneurs to reach their ideal clients using clean, user-friendly designs that meet their clients needs on every platform. <br> <br>
+                You can usually find me watching a documentary, making graphic illustrations, or learning something new on Youtube University. I am to excited to create digital products that connect people.</p></div>
         </div>
         <div class="skills">
             <h3 class="skill-list">Skills</h3>
