updated link to IG

--- a/contact/contact.html
+++ b/contact/contact.html
@@ -36,7 +36,7 @@
                 <ul>
                     <li><a href="https://www.linkedin.com/in/natashamunoz/" target="_blank"><i class="fa-brands fa-linkedin">
                         </i></a></li>
-                    <li><a href="https://www.instagram.com/designnv_gram/" target="_blank"><i class="fa-brands fa-instagram">
+                    <li><a href="https://www.instagram.com/nvdigitalcreations_gram/" target="_blank"><i class="fa-brands fa-instagram">
                         </i></a></li>
                     <li><a href="https://github.com/nmunoz0923" target="_blank">
                     <i class="fa-brands fa-github">
