--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600&family=Raleway:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 <script src="https://kit.fontawesome.com/26c852d4d3.js" crossorigin="anonymous"></script>
-    <title>DesignerNV Portfolio</title>
+    <title>NVDigitalCreations Portfolio</title>
 </head>
 <body>
     
