--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <footer>
         <div class="ftr-wrapper">
         <div class="copyright">
-            <div class="copy">&copy; nv4development. All rights reserved</div>
+            <div class="copy">&copy; nvdigitalcreations. All rights reserved</div>
             <div class="privacy"><strong class="">Privacy Policy</strong>
             </div>
             <div class="terms"><strong>Terms & Conditions</strong>
