--- a/contact/contact.html
+++ b/contact/contact.html
@@ -76,7 +76,7 @@
     <footer>
         <div id="contact-page-ftr" class="ftr-wrapper">
         <div class="copyright">
-            <p class="copy">&copy; nv4development. All rights reserved</p>
+            <p class="copy">&copy; nvdigitalcreations. All rights reserved</p>
             <p class="privacy"><strong>Privacy Policy</strong></p>
             <p class="terms"><strong>Terms & Conditions</strong></p>
         </div>
