--- a/about-me/about.html
+++ b/about-me/about.html
@@ -62,7 +62,7 @@
     <footer>
         <div class="ftr-wrapper">
         <div class="copyright">
-            <p class="copy">&copy; nv4development. All rights reserved</p>
+            <p class="copy">&copy; nvdigitalcreations. All rights reserved</p>
             <p class="privacy"><strong>Privacy Policy</strong></p>
             <p class="terms"><strong>Terms & Conditions</strong></p>
         </div>
