--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <main>
     <section class="hero">
         <h1>Hey there, I'm Natasha</h1>
-        <h2>Freelance Visual Designer<br>& Web Developer</h2>
+        <h2>Freelance Visual Designer</h2>
         <p>I help business grow by crafting amazing web experiences. <br> If your looking for a designer and developer that has a diverse range of skills and likes to get stuff done, lets talk.</p>
         <a href="#mywork"><button class="btn-1">See My Work<i class="fa-solid fa-arrow-down"></i></button></a>
     </section>
@@ -39,7 +39,7 @@
         <div class="services-1">
             <img class="icon" id="first"src="./images/rocket.svg" alt="rocket icon">
             <strong>
-                Built accessible responsive websites
+                Designed accessible responsive websites
             </strong>
             <p>My goal is to build accessible and responsive user interfaces for the web and mobile, while preserving the best practices for proper user experience.</p>
         </div>
