updated about me content

--- a/about-me/about.html
+++ b/about-me/about.html
@@ -30,9 +30,13 @@
             <h4>About Me</h4>
             <div class="about-me-wrapper">
             <div class="profile"><img src="../images/me.JPG" alt="profile photo"></div>
-            <div class="all-about-me"><p>I'm a Visual Designer that is open to new opportunities that help me learn, grow, and create beautiful designs that help others share their passion. I start with the concept I want to use, then draw the sketch that will embody the project, and then move on to creating it digitally. <br> <br>
-                Before learning how to wireframe and use Adobe Creative Suite, I was working in Finance. I began learning web design online so I could start freelancing as a side hustle. As soon as I learned about color schemes, iconography, and typefaces I was hooked; and I've been seeking out visual design opportunities ever since. I love knowing that I can help small businesses and entrepreneurs to reach their ideal clients using clean, user-friendly designs that meet their clients needs on every platform. <br> <br>
-                In my spare time you can usually find me watching a documentary, making graphic illustrations, or learning something new on Youtube University.</p></div>
+            <div class="all-about-me"><p>I’m a Visual designer with a passion for creating beautiful and functional websites. With several years of experience in the industry, I have developed a keen eye for design and a deep understanding of user experience. I believe that a great website should not only look visually appealing but also be easy to navigate and intuitive for the user. My approach to web design is to focus on the user's needs and create designs that are tailored to their specific requirements.<br><br>
+
+Before joining the world of design I was working in Finance. I began learning web design online so I could start freelancing as a side hustle. As soon as I learned about color schemes, iconography, and typefaces I was hooked; and I've been seeking out visual design opportunities ever since. I love knowing that I can help businesses and entrepreneurs alike to reach their ideal clients using clean, user-friendly designs that meet their clients needs on every platform.<br><br>
+
+When I'm not designing websites, I love to travel and explore new places. I also enjoy watching nature documentaries and . I find inspiration in the beauty of the natural world around me, and I strive to incorporate that inspiration into my designs.<br><br>
+
+If you're looking for a web designer who can create beautiful, functional websites that meet your specific needs, then look no further. Contact me today to discuss your project and see how I can help bring your vision to life!</p></div>
         </div>
         <div class="skills">
             <h3 class="skill-list">Skills</h3>
