updated services section

--- a/index.html
+++ b/index.html
@@ -41,17 +41,17 @@
             <strong>
                 Designed accessible responsive websites
             </strong>
-            <p>My goal is to build accessible and responsive user interfaces for the web and mobile, while preserving the best practices for proper user experience.</p>
+            <p>My goal is to design accessible and responsive user interfaces for the desktop and mobile, while utilizing the best practices for proper user experience.</p>
         </div>
         <div class="services-2">
             <img class="icon" id="second" src="./images/cart.svg" alt="cart icon">
             <strong>Designed an eCommerce store</strong>
-            <p>Experience in re-designing existing websites, this allows users to always have the right experience when visiting your eCommerce website. It’s a different process compared to traditional website design but I’ve been successful in all prjects so far.</p>
+            <p>Experience re-designing existing websites, ensuring users utilizing your site have the right experience; and I’ve been successful in all prjects so far.</p>
         </div>
         <div class="services-3">
             <img class="icon" id="third" src="./images/cellphone.svg" alt="cellphone icon">
             <strong>Designed and built projects that showcase my skills.</strong>
-            <p>I recently started designing and coding mobile first and I love it. This process ensures users can have the most up to date experience when viewing your website. </p>
+            <p>I recently started designing mobile first and I love it. This process ensures users can have the most up to date experience when viewing your website. </p>
         </div>
     </div>
     </section>
