--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </div>
         <div class="services-2">
             <img class="icon" id="second" src="./images/cart.svg" alt="cart icon">
-            <strong>Designed an eCommerce store</strong>
+            <strong>Designing for eCommerce</strong>
             <p>Experience re-designing existing websites, ensuring users utilizing your site have the right experience; and I’ve been successful in all prjects so far.</p>
         </div>
         <div class="services-3">
