--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="services-1">
             <img class="icon" id="first"src="./images/rocket.svg" alt="rocket icon">
             <strong>
-                Designed accessible responsive websites
+                Designing accessible responsive websites
             </strong>
             <p>My goal is to design accessible and responsive user interfaces for the desktop and mobile, while utilizing the best practices for proper user experience.</p>
         </div>
@@ -50,7 +50,7 @@
         </div>
         <div class="services-3">
             <img class="icon" id="third" src="./images/cellphone.svg" alt="cellphone icon">
-            <strong>Designed and built projects that showcase my skills.</strong>
+            <strong>Showcasing my skills with designs</strong>
             <p>I recently started designing mobile first and I love it. This process ensures users can have the most up to date experience when viewing your website. </p>
         </div>
     </div>
