updated placement of content

--- a/index.html
+++ b/index.html
@@ -38,10 +38,8 @@
         <div class="wrapper">
         <div class="services-1">
             <img class="icon" id="first"src="./images/rocket.svg" alt="rocket icon">
-            <strong>
-                Designing accessible responsive websites
-            </strong>
-            <p>My goal is to design accessible and responsive user interfaces for the desktop and mobile, while utilizing the best practices for proper user experience.</p>
+            <strong>Showcasing my skills with designs</strong>
+            <p>I recently started designing mobile first and I love it. This process ensures users can have the most up to date experience when viewing your website. </p>
         </div>
         <div class="services-2">
             <img class="icon" id="second" src="./images/cart.svg" alt="cart icon">
@@ -50,8 +48,8 @@
         </div>
         <div class="services-3">
             <img class="icon" id="third" src="./images/cellphone.svg" alt="cellphone icon">
-            <strong>Showcasing my skills with designs</strong>
-            <p>I recently started designing mobile first and I love it. This process ensures users can have the most up to date experience when viewing your website. </p>
+            <strong>Designing accessible responsive websites</strong>
+            <p>My goal is to design accessible and responsive user interfaces for the desktop and mobile, while utilizing the best practices for proper user experience.</p>
         </div>
     </div>
     </section>
