updated btn on contact page

--- a/contact/contact.html
+++ b/contact/contact.html
@@ -66,7 +66,7 @@
                     <div class="time-group">
                         Your Timeline <input type="timeline" placeholder="Timeline" name="timeline" required>
                     </div>
-                    <button type="submit" name="submit-button" class="btn-3"><p>Let's do this</p><img src="../images/paper-plane.png" alt="paper plane icon"></button>
+                    <button type="submit" name="submit-button" class="btn-3"><p>Let's do this</p><i class="fa-regular fa-paper-plane"></i></button>
                 </form>
                 </div>
             </div>
