updated alt attributes on contact pg

--- a/contact/contact.html
+++ b/contact/contact.html
@@ -34,11 +34,11 @@
             Also if you want to get in touch with me you can reach me directly on social media.</p>
             <div class="socials">
                 <ul>
-                    <li><a href="https://www.linkedin.com/in/natashamunoz/" target="_blank"><i class="fa-brands fa-linkedin">
+                    <li><a href="https://www.linkedin.com/in/natashamunoz/" target="_blank" alt="linkedin logo"><i class="fa-brands fa-linkedin">
                         </i></a></li>
-                    <li><a href="https://www.instagram.com/nvdigitalcreations_gram" target="_blank"><i class="fa-brands fa-instagram">
+                    <li><a href="https://www.instagram.com/nvdigitalcreations_gram" target="_blank" alt="instagram logo"><i class="fa-brands fa-instagram">
                         </i></a></li>
-                    <li><a href="https://github.com/nmunoz0923" target="_blank">
+                    <li><a href="https://github.com/nmunoz0923" target="_blank" alt="github logo">
                     <i class="fa-brands fa-github">
                         </i></a></li>
                 </ul>
@@ -66,7 +66,7 @@
                     <div class="time-group">
                         Your Timeline <input type="timeline" placeholder="Timeline" name="timeline" required>
                     </div>
-                    <button type="submit" name="submit-button" class="btn-3"><p>Let's do this</p><i class="fa-regular fa-paper-plane"></i></button>
+                    <button type="submit" name="submit-button" class="btn-3"><p>Let's do this</p><i class="fa-regular fa-paper-plane" alt="paper plane icon"></i></button>
                 </form>
                 </div>
             </div>
