--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <h1>Hey there, I'm Natasha</h1>
         <h2>Visual Designer</h2>
         <p>I help business grow by crafting amazing web experiences! <br> If your looking for a designer that has a diverse range of skills and likes to get stuff done, lets talk.</p>
-        <a href="#mywork"><button class="btn-1">See My Work<i class="fa-solid fa-arrow-down"></i></button></a>
+        <a href="#mywork"><button class="btn-1">See My Work<i class="fa-solid fa-arrow-down" alt="down arrow icon"></i></button></a>
     </section>
 
     <section class="services">
