--- a/about-me/about.html
+++ b/about-me/about.html
@@ -14,7 +14,7 @@
 <body>
     
     <header>
-        <a href="../index.html" id="logo" alt="logo"><img src="../images/logo.svg" alt="logo"></a>
+        <a href="../index.html" id="logo" alt="logo"><img src="../images/nv_logo-min.png" alt="logo"></a>
         <nav>
             <ul class="nav-links">
                 <li><a href="../index.html">Home</a></li>
