--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="https://kit.fontawesome.com/26c852d4d3.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <meta name="description" content="Natasha Munoz, a Visual Designer available to help you bring your vision to life!">
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600&family=Raleway:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <title>NVDigitalCreations Portfolio</title>
 </head>
